--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,11 @@
 body {
   background-color: black;
   color: chartreuse;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.infobloc {
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border: 2px solid yellowgreen;
 }
